3d diamond path object

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHei
 camera.position.z = 300;
 
 var light = new THREE.SpotLight();
-light.position.set(170, 330, -160);
+light.position.set(100, 50, 100);
 scene.add(light);
 
 // initialize renderer and add canvas element to DOM
@@ -36,21 +36,57 @@ light.castShadow = true;
 vasePlane.castShadow = true;
 vasePlane.receiveShadow = true;
 
-/*function render() {
-  // spin the plane around its axis
-  requestAnimationFrame(render);
+var right = true;
+var back = true;
+
+function render() {
+
+  // translate objects
+  if (right === true && back === true) {
+    vasePlane.position.x += 1;
+    vasePlane.position.z -= 1;
+    if (vasePlane.position.x === 100) {
+      right = false;
+    }
+  } else if (right === false && back === true) {
+    vasePlane.position.x -= 1;
+    vasePlane.position.z -= 1;
+    if (vasePlane.position.x === 0) {
+      back = false;
+    }
+  } else if (back === false && right === false) {
+    vasePlane.position.x -= 1;
+    vasePlane.position.z += 1;
+    if (vasePlane.position.x === -100) {
+      right = true;
+    }
+  } else {
+    vasePlane.position.x += 1;
+    vasePlane.position.z += 1;
+    if (vasePlane.position.x === 0) {
+      back = true;
+    }
+  }
+
+  // draw
   renderer.render(scene, camera);
+
+  // set up the next call
+  requestAnimationFrame(render);
+
 }
 
-render();*/
+render();
 
-function animate(t) {
+/*function animate(t) {
   // spin the camera in a circle
 //  camera.position.x = Math.sin(t/1000)*300;
 //  camera.position.y = 150;
 //  camera.position.z = Math.cos(t/1000)*300;
   // translate objects
   vasePlane.position.x += 1;
+  vasePlane.position.z -= 1;
+  
   // rotate the objects
 //  vasePlane.rotation.x = .000;
 //  vasePlane.rotation.y +=  0.0;
@@ -62,7 +98,8 @@ function animate(t) {
   window.requestAnimationFrame(animate, renderer.domElement);
 };
 
-animate(new Date().getTime());
+animate(new Date().getTime());*/
+
   
     </script>
   </body>
