changed setClearColorHex to setClearColor

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ renderer.setSize(window.innerWidth, window.innerHeight);
 document.body.appendChild(renderer.domElement);
 
 // set scene background color
-renderer.setClearColorHex(0xEEEEEE, 1.0);
+renderer.setClearColor(0xEEEEEE, 1.0);
 renderer.clear();
 
 // add objects to scene
